#80 - Spielerkommunikation: - Fixed sonarcloud issue